--- a/index.html
+++ b/index.html
@@ -336,10 +336,10 @@
                                 required
                                 placeholder="Номер телефона"
                             />
-                            <div
+                            <!-- <div
                                 class="g-recaptcha"
                                 data-sitekey="6LcgDA8qAAAAAMClZNH53at5i4ef-eV5GsEfECk8"
-                            ></div>
+                            ></div> -->
                             <button
                                 class="g-recaptcha"
                                 data-sitekey="6LcgDA8qAAAAAMClZNH53at5i4ef-eV5GsEfECk8"
