--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <body>
         <header class="container">
             <div class="left-column">
-                <img src="./images/icons/logo.svg" alt="Логотип" />
+                <img src="./images/icons/logo.svg" alt="Логотип" class="logo" />
                 <div class="languages">
                     <a href="#">ENG</a>
                     <span>|</span>
@@ -45,6 +45,9 @@
                 <a href="#">Войти</a>
                 <button>РЕГИСТРАЦИЯ</button>
             </div>
+            <button class="burger-menu">
+                <img src="./images/icons/burger-menu.svg" alt="Меню" />
+            </button>
         </header>
         <!--  -->
         <main>
@@ -139,7 +142,7 @@
                 </article>
             </section>
             <!--  -->
-            <section class="about">
+            <!-- <section class="about">
                 <div class="container">
                     <img
                         src="./images/banners/about.png"
@@ -197,9 +200,9 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
             <!--  -->
-            <section class="container why-we">
+            <!-- <section class="container why-we">
                 <div class="left-column">
                     <div class="subtitle">Почему выбирают нас?</div>
                     <h3>
@@ -242,9 +245,9 @@
                     src="./images/banners/why-we.png"
                     alt="Почему выбирают нас?"
                 />
-            </section>
+            </section> -->
             <!--  -->
-            <section class="time-in-it">
+            <!-- <section class="time-in-it">
                 <div class="container">
                     <div class="heading-lg title">
                         Более 6 лет опыта в сфере IT
@@ -296,9 +299,9 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
             <!--  -->
-            <section class="container join-us">
+            <!-- <section class="container join-us">
                 <div class="subtitle">Карьера в IT</div>
                 <div class="heading-lg">Вступайте в нашу команду</div>
                 <div class="jobs">
@@ -312,10 +315,11 @@
                     <div class="heading-md">Тестировщик решений</div>
                     <div class="heading-md">Другая деятельность</div>
                 </div>
-            </section>
+            </section> -->
         </main>
+
         <!--  -->
-        <footer>
+        <!-- <footer>
             <div class="container">
                 <div class="content">
                     <img
@@ -348,7 +352,7 @@
                     Copyright 2019-2022 © Skyweb Co. Все права защищены.
                 </div>
             </div>
-        </footer>
+        </footer> -->
     </body>
 
     <script src="./index.js"></script>
