--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </article>
             </section>
             <!--  -->
-            <!-- <section class="about">
+            <section class="about">
                 <div class="container">
                     <img
                         src="./images/banners/about.png"
@@ -200,9 +200,9 @@
                         </div>
                     </div>
                 </div>
-            </section> -->
+            </section>
             <!--  -->
-            <!-- <section class="container why-we">
+            <section class="container why-we">
                 <div class="left-column">
                     <div class="subtitle">Почему выбирают нас?</div>
                     <h3>
@@ -244,10 +244,11 @@
                 <img
                     src="./images/banners/why-we.png"
                     alt="Почему выбирают нас?"
+                    class="banner"
                 />
-            </section> -->
+            </section>
             <!--  -->
-            <!-- <section class="time-in-it">
+            <section class="time-in-it">
                 <div class="container">
                     <div class="heading-lg title">
                         Более 6 лет опыта в сфере IT
@@ -299,7 +300,7 @@
                         </div>
                     </div>
                 </div>
-            </section> -->
+            </section>
             <!--  -->
             <!-- <section class="container join-us">
                 <div class="subtitle">Карьера в IT</div>
