--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                 </div>
             </section>
             <!--  -->
-            <!-- <section class="container join-us">
+            <section class="container join-us">
                 <div class="subtitle">Карьера в IT</div>
                 <div class="heading-lg">Вступайте в нашу команду</div>
                 <div class="jobs">
@@ -316,7 +316,7 @@
                     <div class="heading-md">Тестировщик решений</div>
                     <div class="heading-md">Другая деятельность</div>
                 </div>
-            </section> -->
+            </section>
         </main>
 
         <!--  -->
