--- a/index.html
+++ b/index.html
@@ -318,9 +318,8 @@
                 </div>
             </section>
         </main>
-
         <!--  -->
-        <!-- <footer>
+        <footer>
             <div class="container">
                 <div class="content">
                     <img
@@ -353,7 +352,7 @@
                     Copyright 2019-2022 © Skyweb Co. Все права защищены.
                 </div>
             </div>
-        </footer> -->
+        </footer>
     </body>
 
     <script src="./index.js"></script>
